--- a/MailBoxEmpty01.csproj
+++ b/MailBoxEmpty01.csproj
@@ -241,6 +241,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mail_User.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Mail_User.Designer.cs">
+      <DependentUpon>Mail_User.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs" />
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
